--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
 </script>
 
 
-<link rel="stylesheet" type="text/css" href="./public/stylesheets/index.css">
+<link rel="stylesheet" type="text/css" href="../public/stylesheets/index.css">
 
 <script src="/bower_components/kurento-utils/js/kurento-utils.min.js"></script>
 <script src="/bower_components/webrtc-adapter/release/adapter.js"></script>
