--- a/views/index.html
+++ b/views/index.html
@@ -334,7 +334,7 @@
   <!-- Link to open the modal -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-<script type="text/javascript" src="/javascript/index.js">
+<script type="text/javascript" src="../public/javascript/index.js">
 </script>
 </body>
 </html>
