--- a/client/static/partials/home.html
+++ b/client/static/partials/home.html
@@ -1,5 +1,295 @@
-<div class="container">
+<link rel="stylesheet" type="text/css" href="/static/stylesheets/index.css">
 
-  <h1>Success</h1>
-  
+<nav>
+  <ul>
+    <li class="brand"><!-- <div class="title"><span>Life Streams</span><span>Crowdfunding and Live Streaming<a href="#">Combined</a></span></div> -->LS</li>
+
+    <!-- <a href="./index.html"><li class="active">Home</li></a> -->
+    <a href="./explore.ejs"><li>Explore</li></a>
+    <li>About</li>
+    <a href="#" class="openb"><li>Log In</li></a>
+    <a href="#" class="open2"><li>Start</li></a>
+    <li class="slide"></li>
+  </ul>
+</nav>
+
+<section>
+ <div class="container">
+  <div class="column-one">
+
+  <div class="title"><span>Life Streams<img class="earth" src="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png">
+ </span><span>Crowdfunding and Live Streaming<a href="#">Combined</a></span> </div>
+<div class="featured">
+  <div class="featured-background">
+  <div class="featured-video">
+
+
+      <video id="video" autoplay width="100%" height="100%"></video>
+
+
+  </div>
+  <div class="summary">
+          <h1>ADULT SWIM</h1>
+          <p>What's up, this is all the info about the stream, learn all the things, chill and chill</p>
+          <a class="watch-button" id="presenter">Participate</a>
+  </div>
+  </div>
+  <div class="ask-button">
+    <img class="ask-image" src="http://peerwithin.com/wp-content/uploads/2016/11/ASKLIVE.png">
+  </div>
+   <div class="open3 donate-button">
+
+
+    <img class="donate-image" src="http://peerwithin.com/wp-content/uploads/2016/11/DONATE.png">
+
+
+  </div>
+     </div>
+
+  </div>
+
+
+
+
+  <div class="column-two">
+
+<div class="wrap">
+   <ul class="tabs group">
+    <li><a class="active" href="#/one">Featured</a></li>
+    <li><a href="#/two">Popular</a></li>
+
+  </ul>
+  <div id="content">
+    <div id="one" class="featured-videos">
+
+    </div>
+    <div id="two" class="hidden">Sexy sexy  consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq</div>
+    <div id="three" class="hidden">Tabs , consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq</div>
+
+            <a id="" href="#" class="btn btn-success">
+              <span class="glyphicon glyphicon-play"></span> Presenter</a>
+            <a id="viewer" href="#" class="btn btn-primary">
+              <span class="glyphicon glyphicon-user"></span> Viewer</a>
+            <a id="terminate" href="#" class="btn btn-danger">
+              <span class="glyphicon glyphicon-stop"></span> Stop</a>
+          </div>
+        </div>
+        <br/>
+        <label class="control-label" for="console">Console</label><br><br>
+        <div id="console" class="democonsole">
+          <ul></ul>
+        </div>
+      </div>
+
+
+
+
+    </div>
+    </div>
+  </div>
+
 </div>
+    </div>
+
+    </div>
+<!--
+<div class="login-modal-overlay modal1">
+   <div class="login-modal reg-modal">
+    <h1>Log In</h1>
+    <h2>R U FUKIN REDY?</h2>
+    <form>
+      <div class="group">
+        <input type="text"required></span><span class="bar"></span>
+        <label>Username</label>
+      </div>
+      <div class="group">
+        <input type="password" required></span><span class="bar"></span>
+        <label>Password</label>
+      </div>
+      <button type="submit" class="button buttonBlue">Log In
+
+    </button>
+    <button  class="facebookRegister">Log In With Facebook</button>
+  </form>
+</div>
+
+</div>
+<br>
+<br> -->
+</section>
+<div class="sign-up-modal-overlay modal1">
+<div class="sign-up-modal">
+<div id="login-box">
+  <div class="left">
+    <h1>Sign up</h1>
+
+    <input type="text" name="username" placeholder="Username" />
+    <input type="text" name="email" placeholder="E-mail" />
+    <input type="password" name="password" placeholder="Password" />
+    <input type="password" name="password2" placeholder="Retype password" />
+
+    <input type="submit" name="signup_submit" value="Sign me up" />
+  </div>
+
+  <div class="right">
+    <span class="loginwith">Sign in with<br />social network</span>
+
+    <button class="social-signin facebook">Log in with facebook</button>
+    <button class="social-signin twitter">Log in with Twitter</button>
+    <button class="social-signin google">Log in with Google+</button>
+  </div>
+  <div class="or">OR</div>
+</div>
+</div>
+</div>
+
+
+<!-- <div class="sign-up-modal-overlay modal1">
+
+<div class="sign-up-modal">
+    <div id="close-modal-button">
+    </div>
+
+    <div class="logo-container">
+        <img src ="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png" class="logo" width="188px">
+
+    </div>
+
+    <form class="details">
+        <div class="input-container">
+            <input class="email-input with-placeholder" id="email" type="email" placeholder="Email" />
+        </div>
+        <div class="input-container">
+            <input class="username-input with-placeholder" id="username" type="text" placeholder="Username" maxlength="8" />
+        </div>
+        <div class="input-container">
+            <input class="password-input with-placeholder" id="password" type="password" placeholder="Password" />
+        </div>
+
+        <div class="col-sm-12 form-checkbox">
+            <label>
+                <input type="checkbox" value="true"> Keep me signed in</label>
+        </div>
+
+        <input id="sign-up-button" type="submit" value="Sign Up">
+
+        <p>Already have an account? <a href="#signIn">Sign in</a></p>
+
+    </form>
+</div>
+</div>
+<div class="sign-up-modal-overlay modal2">
+
+<div class="sign-up-modal">
+    <div id="close-modal-button2">
+    </div>
+
+    <div class="logo-container">
+        <img src ="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png" class="logo" width="188px">
+
+    </div>
+
+    <form class="details">
+        <div class="input-container">
+            <input class="username-input with-placeholder" id="username" type="text" placeholder="Username" maxlength="8" />
+        </div>
+        <div class="input-container">
+            <input class="password-input with-placeholder" id="password" type="password" placeholder="Password" />
+        </div>
+
+        <div class="col-sm-12 form-checkbox">
+            <label>
+                <input type="checkbox" value="true"> Keep me signed in</label>
+        </div>
+
+        <input id="sign-up-button" type="submit" value="Log In">
+
+        <p>Already have an account? <a href="#signIn">Sign in</a></p>
+
+    </form>
+</div>
+</div>
+ -->
+
+<!-- <div class="login-modal-overlay modal2">
+
+  <div class="login-modal reg-modal">
+    <h1>Register</h1>
+    <h2>R U FUKIN REDY?</h2>
+    <form>
+    <div class="group">
+        <input type="email" required></span><span class="bar"></span>
+        <label>E-Mail</label>
+      </div>
+      <div class="group">
+        <input type="text"required></span><span class="bar"></span>
+        <label>Username</label>
+      </div>
+      <div class="group">
+        <input type="password" required></span><span class="bar"></span>
+        <label>Password</label>
+      </div>
+      <button type="submit" class="button buttonBlue">Register
+
+    </button>
+    <button  class="facebookRegister">Register With Facebook</button>
+  </form>
+</div>
+
+</div>
+ -->
+ <div class="donateModal">
+<div class="sign-up-modal-overlay modal3">
+   <div class="sign-up-modal">
+       <div id="close-modal-button" class="close-2">
+    </div>
+        <div class="logo-container">
+        <img src ="http://peerwithin.com/wp-content/uploads/2016/12/earthlogoFINAL.png" class="logo" width="188px">
+
+    </div>
+    <h1>Donate to X</h1>
+   <form action="/create" method="POST" id="payment-form">
+      <span class="payment-errors"></span>
+
+      <div class="group">
+      <input type="text" placeholder="First Name" data-stripe="firstName">
+
+      </div>
+
+      <div class="group">
+        <input type="text" placeholder="Last Name"  data-stripe="lastName">
+
+      </div>
+
+      <div class="group">
+       <input type="text" placeholder="Card Number"  data-stripe="number">
+
+      </div>
+
+      <div class="group">
+        <input type="text"  placeholder="Month" data-stripe="exp_month">
+          <input type="text" placeholder="Year" data-stripe="exp_year">
+
+
+
+      </div>
+
+      <div class="group">
+      <input type="text" placeholder="CVC" data-stripe="cvc">
+
+      </div>
+
+
+      <input type="submit" class="submit" value="Submit Payment">
+    </form>
+    </div>
+
+</div>
+
+</div>
+
+  <!-- Link to open the modal -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+<script type="text/javascript" src="/js/config/index.js">
+</script>
