--- a/client/static/partials/home.html
+++ b/client/static/partials/home.html
@@ -167,23 +167,39 @@
 
     <div id="login-box">
 
-      <div class="left">
+      <!-- Here we want to bring in the authCtrl because this will handle all new users that come to our site.
+
+      After the user has filled in all the information, when they click submit, it will trigger the register function
+
+      with Angular and create a new user. -->
+
+      <div class="left" ng-controller="authCtrl">
 
         <h1>Sign up</h1>
 
-        <input type="text" name="username" placeholder="Username" />
+        <form>
 
-        <input type="text" name="email" placeholder="E-mail" />
+          <input type="text" name="username" placeholder="Username" />
 
-        <input type="password" name="password" placeholder="Password" />
+          <input type="text" name="email" placeholder="E-mail" />
 
-        <input type="password" name="password2" placeholder="Retype password" />
+          <input type="password" name="password" placeholder="Password" />
 
-        <input type="submit" name="signup_submit" value="Sign me up" />
+          <input type="password" name="password2" placeholder="Retype password" />
+
+          <input type="submit" name="signup_submit" value="Sign me up" ng-click="register()" />
+
+        </form>
 
       </div>
 
-      <div class="right">
+      <!-- This is the end of the authCtrl div.  -->
+
+      <!-- Now we want to bring in the loginCtrl so we can log existing users in. Here we can also go through the authentications
+
+      we need to make sure in fact it's that user who is logging in. -->
+
+      <div class="right" ng-controller="loginCtrl">
 
         <span class="loginwith">Sign in with<br />social network</span>
 
