--- a/views/index.html
+++ b/views/index.html
@@ -45,11 +45,11 @@
 
 <nav>
   <ul>
-    <li class="brand"><!-- <div class="title"><span>Life Streams</span><span>Crowdfunding and Live Streaming<a href="#">Combined</a></span></div> -->LS</li>
+    <a href="index.html"><li class="brand"><!-- <div class="title"><span>Life Streams</span><span>Crowdfunding and Live Streaming<a href="#">Combined</a></span></div> -->LS</li></a>
 
     <!-- <a href="./index.html"><li class="active">Home</li></a> -->
-    <a href="./explore.ejs"><li>Explore</li></a>
-    <li>About</li>
+    <a href="explore.html"><li>Explore</li></a>
+    <a href="#"><li>About</li></a>
     <a href="#" class="openb"><li>Log In</li></a>
   <a href="#" class="open2"><li>Start</li></a>
     <li class="slide"></li>
@@ -78,12 +78,12 @@
   </div>
   </div>
   <div class="ask-button">
-    <img class="ask-image" src="http://peerwithin.com/wp-content/uploads/2016/11/ASKLIVE.png">
+    <img class="ask-image" src="http://i.imgur.com/6CfFMtX.png">
   </div>
    <div class="open3 donate-button">
   
 
-    <img class="donate-image" src="http://peerwithin.com/wp-content/uploads/2016/11/DONATE.png">
+    <img class="donate-image" src="http://i.imgur.com/8xQHMrg.png">
 
 
   </div>
@@ -96,32 +96,27 @@
 
   <div class="column-two">
 
-<div class="wrap">
-   <ul class="tabs group">
-    <li><a class="active" href="#/one">Featured</a></li>
-    <li><a href="#/two">Popular</a></li>
 
-  </ul>
   <div id="content">
-    <div id="one" class="featured-videos">
+  <div class="searchBar">
+<form>
+  <input type="text" />
+  <div class="after"></div>
+  <input type="submit" />
+</form>
+<h4>&nbsp;</h4>
+</div>
 
-    </div>
-    <div id="two" class="hidden">Sexy sexy  consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq</div>
-    <div id="three" class="hidden">Tabs , consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq</div>
+
+<div class="popularVideos">
+</div>
+
   
-            <a id="" href="#" class="btn btn-success">
-              <span class="glyphicon glyphicon-play"></span> Presenter</a>
-            <a id="viewer" href="#" class="btn btn-primary">
-              <span class="glyphicon glyphicon-user"></span> Viewer</a>
-            <a id="terminate" href="#" class="btn btn-danger">
-              <span class="glyphicon glyphicon-stop"></span> Stop</a>
+           
           </div>
         </div>
         <br/>
-        <label class="control-label" for="console">Console</label><br><br>
-        <div id="console" class="democonsole">
-          <ul></ul>
-        </div>
+        
       </div>
 
 
@@ -164,20 +159,20 @@
 <div class="sign-up-modal">
 <div id="login-box">
   <div class="left">
-    <h1>Sign up</h1>
+    <h1>Log in</h1>
     
     <input type="text" name="username" placeholder="Username" />
-    <input type="text" name="email" placeholder="E-mail" />
+    <!-- <input type="text" name="email" placeholder="E-mail" /> -->
     <input type="password" name="password" placeholder="Password" />
-    <input type="password" name="password2" placeholder="Retype password" />
+   <!--  <input type="password" name="password2" placeholder="Retype password" /> -->
     
-    <input type="submit" name="signup_submit" value="Sign me up" />
+    <input type="submit" name="signup_submit" value="Log In" />
   </div>
   
   <div class="right">
-    <span class="loginwith">Sign in with<br />social network</span>
+    <span class="loginwith">Sign in with a<br />Social Network</span>
     
-    <button class="social-signin facebook">Log in with facebook</button>
+    <button class="social-signin facebook">Log in with Facebook</button>
     <button class="social-signin twitter">Log in with Twitter</button>
     <button class="social-signin google">Log in with Google+</button>
   </div>
@@ -185,6 +180,33 @@
 </div>
 </div>
 </div>
+
+<div class="sign-up-modal-overlay modal2">
+<div class="sign-up-modal">
+<div id="login-box">
+  <div class="left">
+    <h1>Sign Up</h1>
+    
+    <input type="text" name="username" placeholder="Username" />
+    <input type="text" name="email" placeholder="E-mail" />
+    <input type="password" name="password" placeholder="Password" />
+    <input type="password" name="password2" placeholder="Retype password" />
+    
+    <input type="submit" name="signup_submit" value="Get Started" />
+  </div>
+  
+  <div class="right">
+    <span class="loginwith">Sign up with a<br />Social Network</span>
+    
+    <button class="social-signin facebook">Sign Up with Facebook</button>
+    <button class="social-signin twitter">Sign Up with Twitter</button>
+    <button class="social-signin google">Sign Up with Google+</button>
+  </div>
+  <div class="or">OR</div>
+</div>
+</div>
+</div>
+
 
 
 <!-- <div class="sign-up-modal-overlay modal1">
