--- a/views/index.html
+++ b/views/index.html
@@ -111,6 +111,8 @@
 <div class="popularVideos">
 </div>
 
+<a class="userProfileBUtton" href="#">User Profile Button</a>
+
   
            
           </div>
